--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
     <div class="">
       <button type="button" class="btn btn-info btn-lg" ui-sref='showall'><i class="fa fa-list"></i> Show All Album</button>
       <button type="button" class="btn btn-success btn-lg" ui-sref='createAlbum'><i class="fa fa-building-o"></i>  Create Album</button>
-      <button type="button" class="btn btn-primary btn-lg" ui-sref='photos.addPhoto'><i class="fa fa-picture-o"></i>  Add Photo</button>
+      <!-- <button type="button" class="btn btn-primary btn-lg" ui-sref='photos.addPhoto'><i class="fa fa-picture-o"></i>  Add Photo</button> -->
     </div>
     <br>
 
